<resources>
    <string name="app_name">Expenso</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    ----------------Login and SignUp ------------------
    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>


    <string name="create">Create an account</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>
    <string name="btn_lbl_register">Register</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>

    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>

    <string name="please_wait">Please Wait ...</string>

    ----------------Add Transaction----------------
    <string name="new_transaction">New Transaction</string>
    <string name="back">Back</string>
    <string name="category">Category</string>
    <string name="food">Food</string>
    <string name="shopping">Shopping</string>
    <string name="transport">Transport</string>
    <string name="health">Health</string>
    <string name="other">Other</string>
    <string name="education">Education</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="note">Note</string>
    <string name="details">Details</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="amount">Amount</string>
    --------------- Add Expenses----------------------
    <string name="expenses">Expenses Type</string>

    <string name="transaction_details">Expenses Type</string>
    <string name="Btn_expen">Add Expenses</string>


    ------------Transaction User Details--------------------
    <string name="add_few_details_before_you_continue">Add Few details before You Continue…</string>
    <string name="monthly_budget">Monthly Budget</string>
    <string name="next">NEXT</string>
    <string name="yearly">Yearly</string>
    <string name="edit">edit</string>
    <string name="delete">Delete</string>

    -----------------------Backup-----------------------------------
    <string name="drive_backup">Data Backup</string>
    <string name="last_backup">Last Backup</string>
    <string name="back_up_your_data_to_google_drive_you_can_restore_them_when_you_reinstall_buckoid_app_and_signin_with_google_account">Back up your data to Google Drive. You can restore them when you reinstall Buckoid App and signin with Google Account.</string>
    <string name="we_strongly_recommend_that_you_take_backup_regularly_from_the_app_as_backup_to_google_drive_is_not_automatic_doing_so_would_keep_your_data_safe_even_if_your_device_is_lost_damaged">We strongly recommend that you take backup regularly from the app (as backup to Google Drive is not automatic). Doing so would keep your data safe even if your device is lost/damaged.</string>
    <string name="google_drive_setting">Google Drive Setting</string>
    <string name="transaction_details_backed_up_in_google_drive_are_not_protected_by_buckoid_end_to_end_encryption">Transaction details backed up in Google Drive are not protected by Buckoid end-to-end encryption.</string>
    <string name="google_account">Google Account</string>

    -----------------user profile------------------------
    <string name="yearly_budget">Yearly Budget</string>
    <string name="settings">Settings</string>
    <string name="language">App Language</string>
    <string name="currenncy">Currency</string>
    <string name="backup_data">Backup Data</string>
    <string name="share_to_friends">Share to Friends</string>
    <string name="about_us">About Us</string>
    <string name="expen">Add Expenses</string>
    <string name="Btn_add">Add Profile</string>
    <string name="Btn_updateprofile">Update Profile</string>

    --------------dashboard_transaction---------------------
    <string name="all">All</string>
    <string name="monthly">Monthly</string>
    <string name="Managing">Managing Transactions</string>
    <string name="all_transactions">All Transactions</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="icon">Icon</string>
    <string name="your_reminders">Your Reminders</string>
    <string name="total_income">Total Income</string>
    <string name="total_expenses">Total Expenses</string>
    <string name="your_expenses">Your Expenses</string>
    <string name="upcomming">Upcomming Bills</string>
    <string name="settled">Settled Bills</string>
    <string name="chat">chat</string>
    <string name="type_message">type_message</string>
    <string name="noTect">noTect</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="type">Type</string>
    <string name="err_date">Please enter date</string>
    <string name="err_type">Select expense type</string>
    <string name="err_amount">Enter Amount</string>
    <string name="dashboard">Dashboard</string>
    <string name="transactions">Transactions</string>
    <string name="reminders">Reminders</string>
    <string name="edit_transaction">EDIT TRANSACTION</string>
-----------------about us---------------------------
    <string name="about">
        *EXPENSO is a  expense tracker that’s great for home budget planning.
        *This personal finance manager is a virtual update on your grandma’s envelope system--a proactive budget planner that helps you stay on top of your bills and finances.
        *Built for easy, real-time tracking. And, sync across Android and the web to share your budget with your budgeting partners.
        *Keep everyone on the same page with household finances!</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="Balance">Balance</string>
    <string name="value">$100000</string>
    <string name="Total_income">Total Income</string>
    <string name="Total_expense">Total expense</string>
    <string name="edit_reminder">Edit Reminder</string>

</resources>