<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard"/>

    <item
        android:id="@+id/nav_transactions"
        android:icon="@drawable/ic_transaction"
        android:title="@string/transactions"/>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings"/>

    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/baseline_chat_24"
        android:title="@string/chat"/>
    <item
        android:id="@+id/nav_reminders"
        android:title="@string/reminders"
        android:icon="@drawable/ic_books"/>

</menu>