<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/ThemeOverlay.Expenso.FullscreenContainer"
    tools:context="chat">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/titleChat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/chat"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:backgroundTint="#0000ffff"
                android:contentDescription="@string/back"
                android:src="@drawable/baseline_arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView

            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/chat_right_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/messageType"
            app:layout_constraintTop_toBottomOf="@+id/topBar">

        </androidx.recyclerview.widget.RecyclerView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/messageType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            tools:layout_editor_absoluteY="50dp"
            android:paddingBottom="5dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/message"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:hint="@string/type_message"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:layout_constraintEnd_toStartOf="@+id/sendButton"
                tools:ignore="VisualLintBounds"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/messageInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:textColorHint="#757575" />

            </com.google.android.material.textfield.TextInputLayout>


            <ImageButton
                android:id="@+id/sendButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:backgroundTint="#982BBF"
                android:contentDescription="@string/noTect"
                android:src="@drawable/send"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>