<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditReminder">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/cardColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:paddingTop="10dp">

            <com.google.android.material.textfield.TextInputLayout
                style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:id="@+id/label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/title"
                app:errorEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/labelInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/notes_selector"
                    android:background="@color/white"
                    android:maxLines="5"
                    android:drawablePadding="12dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/dateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/date"
                app:errorEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/DateInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/data_selector"
                    android:drawablePadding="12dp"
                    android:background="@color/white"
                    android:maxLines="1"
                    />
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:id="@+id/amountLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/amount"
                app:errorEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amountInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/money_selector"
                    android:background="@color/white"
                    android:maxLines="1"
                    android:inputType="text"
                    android:drawablePadding="12dp"

                    />
            </com.google.android.material.textfield.TextInputLayout>



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/button_style"
                android:text="@string/add_reminder"
                android:textColor="@color/white"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>